<resources>
    <string name="app_name">C2C</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_txt">Explore new ways to travel with C2C</string>
    <string name="login_txt_second">Please enter your mobile number to proceed</string>
    <string name="verify_txt">Please verify the OTP send to</string>
    <string name="opt_txt">Auto verify your</string>
    <string name="opt_txt_two">OTP in ( 00:10 )</string>
    <string name="allow_location_txt">Have a hassle-free booking experience by giving us</string>
    <string name="location_txt">Location ( for finding available rides )</string>
    <string name="location_phone_txt">Phone ( for account security verification )</string>
    <string name="gps_txt">All C2C cabe to turn on your phone GPS for</string>
    <string name="gps_txt_one">accurate pickup</string>
    <string name="nav_profile_progress_txt">Complete your Profile( 35% )</string>
    <string name="Rs">\u20B9</string>
    <string name="close">Close Sheet</string>
    <string name="expand">Expand Sheet</string>
    <string name="Rs_one">"\u20B9" 15.0</string>
    <string name="invalid_mobile">Please Enter Valid Phone!!!</string>
    <string name="valid_phone">Enter 10 Number Phone!!!</string>
    <string name="invalid_email">Please Enter Valid Email!!</string>
    <string name="invalid_username">Please Enter Valid Username!!</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="enter_otp_on_phone">Enter the otp send on your phone</string>
    <string name="search">Search</string>

</resources>
