<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerifyOtpActivity">


    <ImageView
        android:id="@+id/crossBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/padding_5"
        android:src="@drawable/cross_icon" />

    <TextView

        android:id="@+id/textview_please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crossBtn"
        android:layout_margin="@dimen/margin_20"
        android:text="Please wait."
        android:textColor="@color/black"
        android:textSize="@dimen/txt_heading_two" />

    <TextView
        android:id="@+id/textview_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_please"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="@string/verify_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/textview_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_otp"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="+91-9876543210"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

   <!-- <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/otp_pin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_mobile"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_25"
        android:cursorVisible="true"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:textIsSelectable="false"
        app:pinAnimationType="popIn"
        app:pinBackgroundIsSquare="true"
        app:pinCharacterSpacing="@dimen/spacing_12"
        app:pinLineColors="@color/black_disabled"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="2dp"
        app:pinTextBottomPadding="4dp"


        />-->

    <TextView
        android:id="@+id/otp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_mobile"
        android:layout_marginLeft="@dimen/margin_20"
        android:paddingLeft="@dimen/padding_5"
        android:paddingTop="@dimen/padding_5"
        android:paddingRight="@dimen/padding_5"
        android:text="@string/opt_txt"
        android:textColor="@color/darkwhite"
        android:textSize="@dimen/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_txt"
        android:layout_marginLeft="@dimen/margin_20"
        android:paddingLeft="@dimen/padding_5"
        android:text="@string/opt_txt_two"
        android:textColor="@color/darkwhite"
        android:textSize="@dimen/title" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_30"
        android:background="@drawable/next_button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="Verify"
        android:textAllCaps="false"
        android:textColor="@color/login_top_color"
        android:textSize="@dimen/title" />

</RelativeLayout>