<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".activities.AllowPermissionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/frame_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/margin_width"
                android:layout_height="@dimen/margin_height"
                android:layout_gravity="center"
                android:src="@drawable/house" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_70"
                android:layout_marginRight="@dimen/margin_110"
                android:background="@drawable/circle_button_background"
                android:src="@drawable/locatin" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_110"
                android:layout_marginTop="@dimen/margin_70"
                android:background="@drawable/circle_button_background"
                android:src="@drawable/phone_call" />

            <ImageView
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_90"
                android:src="@drawable/scooter" />

            <ImageView
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_90"
                android:layout_marginRight="@dimen/margin_40"
                android:src="@drawable/man"

                />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame_one"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_5"
                android:text="Welcome To C2C"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_heading_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/allow_location_txt"
                android:textColor="@color/simple_white"
                android:textSize="@dimen/sub_title" />

            <TextView
                android:padding="@dimen/margin_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="the following permission"
                android:textColor="@color/simple_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_70"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/circle_first"
                        android:layout_width="@dimen/circle_margin_10"
                        android:layout_height="@dimen/circle_margin_10"
                        android:background="@drawable/circle_button_background" />


                    <ImageView
                        android:id="@+id/circle_second"
                        android:layout_width="@dimen/circle_margin_10"
                        android:layout_height="@dimen/circle_margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:background="@drawable/circle_button_background" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:text="@string/location_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sub_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/location_phone_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sub_title" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/allowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_middle"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_70"
            android:background="@drawable/next_button_background"
            android:foreground="?attr/selectableItemBackground"
            android:text="Allow"
            android:textAllCaps="false"
            android:textColor="@color/login_top_color"
            android:textSize="@dimen/title" />


    </RelativeLayout>


</ScrollView>